2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): If CHILD and VICTIM have the same
	weight steal from the activity with the larger number of pages.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Use it.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Implement activity_stats method.

	* ager.c (ager_loop): Implement first pass at updating available
	memory statistic.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c: Don't include <loader.h>.  Include <process-spawn.h>.
	(system_task_load): Just call process_spawn to load the task.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (system_task_load.alloc): Update alloc callback
	function to take additional parameter ro to be consistent with the
	updated API.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (program_name): Change type to char *.
	* viengoos.h (program_name): Likewise.
	* panic.c (program_name): Likewise.
	* t-environment.h (program_name): Likewise.
	(environment_init): Just set program_name to
	argv[0].

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* thread.c (thread_raise_exception): Improve the debugging output
	for the case where the thread has no exception page.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): If sending or receiving fails, don't
	panic, print a debugging diagnostic and recover.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* server.c (OBJECT_): Use object_lookup_rel, not CAP_, to find
	objects.
	(ROOT): If ROOT_ADDR_ is not ADDR_VOID, use OBJECT to find the
	thread.  If that fails, use SLOT, not CAP, to find the capability
	slot.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ia32-crt0.S (_start): Clear EBP before jumping to cmain.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_insert): Change return type to struct cap *.
	* as.c (as_insert): Change return type to struct cap *.
	Return SLOT.
